@@ -1,6 +1,7 @@
 Revision history for BioX-Writer
 
 {{$NEXT}}
+    Made some more changes to local_attr and outdir/indir
 
 0.13  2015-11-25 10:53:46 GST
     Made some changes to local attr
